--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -18,6 +18,7 @@
   <div id="main">
     <div id="contents">
       <h2>{$uuid}</h2>
+      {block name=result}There is no result!{/block}
     </div>
   </div>
 
