add link for users and home

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -2,15 +2,7 @@
 
 {block name=result}
 
-  <table>
-    {foreach from=$users item=entry}
-      <tr>
-        <td>{$entry->firstname}</td>
-        <td>{$entry->lastname}</td>
-        <td>{$entry->email}</td>
-      </tr>
-    {/foreach}
-  </table>
+<a href="?action=users">Users list</a>
 
 {/block}
 
