--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -10,7 +10,8 @@
 <body>
   <h1>{$title}</h1>
 
-  {$displayname} (<a href="index.php?action=logout">logout</a>)
+  {$displayname} (<a href="index.php?action=logout">logout</a>) 
+  <a href="index.php">Home</a>
 
   <div id="header">
   </div>
