--- a/tpl/users.html
+++ b/tpl/users.html
@@ -1,17 +1,31 @@
 {extends file="tpl/layout.html"}
 
 {block name=result}
-
-  <table>
-    {foreach from=$users item=entry}
-      <tr>
-        <td>{$entry->firstname}</td>
-        <td>{$entry->lastname}</td>
-        <td>{$entry->email}</td>
-      </tr>
-    {/foreach}
-  </table>
-
+  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <h2 class="sub-header">Users</h2>
+    <div class="table-responsive"> 
+      <table class="table table-striped"> 
+        <thead> 
+          <tr> 
+            <th>#</th> 
+            <th>Firstname</th> 
+            <th>Lastname</th> 
+            <th>Email</th> 
+          </tr> 
+        </thead> 
+        <tbody> 
+        {foreach from=$users item=entry}
+          <tr>
+            <td></td>
+            <td>{$entry->firstname}</td>
+            <td>{$entry->lastname}</td>
+            <td>{$entry->email}</td>
+          </tr>
+        {/foreach}
+        </tbody> 
+      </table> 
+    </div> 
+  </div> 
 {/block}
 
 {block name=js_script}
