--- a/tpl/home.html
+++ b/tpl/home.html
@@ -2,7 +2,13 @@
 
 {block name=result}
 
-<a href="?action=users">Users list</a>
+  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <div class="jumbotron">
+        <h1>Welcome to incredible PBX</h1>
+        <p class="lead">Easily to have control of your PBX !</p>
+        <p><a class="btn btn-lg btn-success" href="http://pbxinaflash.com" role="button">Sign up today</a></p>
+      </div>
+  </div>
 
 {/block}
 
