--- a/tpl/nav.html
+++ b/tpl/nav.html
@@ -7,11 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Incredible PBX</a>
+      <a class="navbar-brand" href="{$root_application}/">Incredible PBX</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/?action=logout">Logout</a></li>
+        <li><a href="{$root_application}/?action=logout">Logout</a></li>
       </ul>
     </div>
   </div>
