--- a/tpl/home.html
+++ b/tpl/home.html
@@ -4,9 +4,9 @@
 
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
       <div class="jumbotron">
-        <h1>Welcome to incredible PBX</h1>
-        <p class="lead">Easily to have control of your PBX !</p>
-        <p><a class="btn btn-lg btn-success" href="http://pbxinaflash.com" role="button">Sign up today</a></p>
+        <h1>Welcome to Incredible PBX</h1>
+        <p class="lead">VoIP Telephony... on Steroids!</p>
+        <p><a class="btn btn-lg btn-success" href="http://incrediblepbx.com" role="button" target="_new">Take the Tour</a></p>
       </div>
   </div>
 
