--- a/tpl/nav.html
+++ b/tpl/nav.html
@@ -8,6 +8,12 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{$root_application}/">Incredible PBX</a>
+      <a class="navbar-brand" href="../" target="_new">XiVO</a>
+      <a class="navbar-brand" href="../asteridex4/" target="_new">AsteriDex</a>
+      <a class="navbar-brand" href="../reminders/" target="_new">Telephone Reminders</a>
+      <a class="navbar-brand" href="http://nerdvittles.com/" target="_new">Nerd Vittles</a>
+      <a class="navbar-brand" href="http://pbxinaflash.com/community/forums/" target="_new">PIAF Forum</a>
+      <a class="navbar-brand" href="http://nerdvittles.com/?p=19785" target="_new">Getting Started</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
