--- a/tpl/nav.html
+++ b/tpl/nav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{$root_application}/">Incredible PBX</a>
-      <a class="navbar-brand" href="../" target="_new">XiVO</a>
+      <a class="navbar-brand" href="../" target="_new">Wazo</a>
       <a class="navbar-brand" href="../asteridex4/" target="_new">AsteriDex</a>
       <a class="navbar-brand" href="../reminders/" target="_new">Telephone Reminders</a>
       <a class="navbar-brand" href="http://nerdvittles.com/" target="_new">Nerd Vittles</a>
