--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -18,8 +18,10 @@
   </div>
 </body>
 
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/incredible.js"></script>
   <script>
-    <script src="js/bootstrap.min.js"></script>
     {block name=js_script}{/block}
   </script>
 
