--- a/tpl/nav.html
+++ b/tpl/nav.html
@@ -8,9 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{$root_application}/">Incredible PBX</a>
-      <a class="navbar-brand" href="../" target="_new">Wazo</a>
-      <a class="navbar-brand" href="../asteridex4/" target="_new">AsteriDex</a>
-      <a class="navbar-brand" href="../reminders/" target="_new">Telephone Reminders</a>
+      <a class="navbar-brand" href="https://wazo-platform.org" target="_new">Wazo Platform</a>
       <a class="navbar-brand" href="http://nerdvittles.com/" target="_new">Nerd Vittles</a>
       <a class="navbar-brand" href="http://pbxinaflash.com/community/forums/" target="_new">PIAF Forum</a>
       <a class="navbar-brand" href="http://nerdvittles.com/?p=19785" target="_new">Getting Started</a>
