update README and link

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -6,7 +6,7 @@
       <div class="jumbotron">
         <h1>Welcome to Incredible PBX</h1>
         <p class="lead">VoIP Telephony... on Steroids!</p>
-        <p><a class="btn btn-lg btn-success" href="http://incrediblepbx.com" role="button" target="_new">Take the Tour</a></p>
+        <p><a class="btn btn-lg btn-success" href="http://wazo-platform.org" role="button" target="_new">Take the Tour</a></p>
       </div>
   </div>
 
